# diff_cover

./: .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-hooks.yaml  .travis.yml  AUTHORS  CHANGELOG  MANIFEST.in  NOTICE  README.md  README.rst  dev-requirements.txt  pylintrc  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini  verify.ps1  verify.sh
.github/workflows/: codeql-analysis.yml  verify.yaml
diff_cover/: __init__.py  __main__.py  command_runner.py  config_parser.py  coverage_reporter.py  diff_cover_tool.py  diff_quality_tool.py  diff_reporter.py  git_diff.py  git_path.py  hook.py  hookspecs.py  report_generator.py  snippets.py  tool.py  util.py  violations_reporter.py
diff_cover/templates/: console_coverage_report.txt  console_quality_report.txt  console_report.txt  github_coverage_warning_annotations.txt  html_coverage_report.html  html_quality_report.html  html_report.html  markdown_coverage_report.md  markdown_quality_report.md  snippet_content.md  snippet_style.html
diff_cover/tests/: helpers.py  test_args.py  test_clover_violations_reporter.py  test_coverage_reporter.py  test_diff_cover_main.py  test_diff_cover_tool.py  test_diff_quality_main.py  test_diff_reporter.py  test_git_diff.py  test_git_path.py  test_integration.py  test_java_violations_reporter.py  test_report_generator.py  test_snippets.py  test_tool.py  test_violations_reporter.py
diff_cover/tests/fixtures/: add_console_report.txt  add_html_report.html  changed_console_report.txt  changed_html_report.html  coverage.xml  coverage2.xml  delete_console_report.txt  delete_html_report.html  dotnet_coverage.xml  dotnet_coverage_console_report.txt  empty_pep8_violations.txt  external_css_html_report.html  git_diff_add.txt  git_diff_changed.txt  git_diff_delete.txt  git_diff_moved.txt  git_diff_subdir.txt  git_diff_unicode.txt  git_diff_violations.txt  hi.py  html_report.html  html_report_empty.html  html_report_one_snippet.html  html_report_two_snippets.html  lua_console_report.txt  markdown_report_one_snippet.md  markdown_report_two_snippets.md  moved_console_report.txt  moved_coverage.xml  moved_html_report.html  mult_inputs_console_report.txt  mult_inputs_html_report.html  pep8_report.txt  pep8_violations_report.html  pep8_violations_report.txt  pep8_violations_report_external_css.html  pycodestyle_violations_report.html  pycodestyle_violations_report.txt  pycodestyle_violations_report_external_css.html  pyflakes_two_files.txt  (+30 more)
diff_cover/violationsreporters/: base.py  java_violations_reporter.py  violations_reporter.py
requirements/: requirements.txt  test-requirements-py26.txt  test-requirements-py27-py3.txt  test-requirements.txt
src/diff_cover/: __init__.py  command_runner.py  diff_cover_tool.py  diff_quality_tool.py  diff_reporter.py
src/diff_cover/templates/: console_quality_report.txt  html_coverage_report.html  html_quality_report.html  snippet_content.html
src/diff_cover/violationsreporters/: base.py  violations_reporter.py
tests/: conftest.py  helpers.py  test_clover_violations_reporter.py  test_config_parser.py  test_diff_cover_main.py  test_diff_cover_tool.py  test_diff_quality_main.py  test_diff_reporter.py  test_git_diff.py  test_git_diff_file.py  test_git_path.py  test_integration.py  test_java_violations_reporter.py  test_report_generator.py  test_snippets.py  test_util.py  test_violations_reporter.py
tests/fixtures/: add_console_report_lcov.txt  add_json_report.json  add_json_report_float.json  add_markdown_report.md  changed_console_report.txt  changed_html_report.html  coverage2.xml  coverage_missing_lines.xml  cpp_functions_console_report.txt  cpp_functions_coverage.lcov  delete_console_report.txt  dotnet_coverage_console_report.txt  empty_pycodestyle_violations.txt  expand_console_report.txt  external_css_html_report.html  external_style.css  git_diff_add.txt  git_diff_code_dupe.txt  git_diff_cpp.txt  git_diff_cpp_functions.txt  git_diff_dotnet.txt  git_diff_lua.txt  git_diff_python.txt  git_diff_typescript.txt  git_diff_typescript_branches.txt  git_diff_violations.txt  git_diff_violations_two_files.txt  hi.py  html_report_empty.html  html_report_one_snippet.html  lcov.info  lua_console_report.txt  luacoverage.xml  markdown_report_one_snippet.md  moved_html_report.html  mult_inputs_console_report.txt  mult_inputs_html_report.html  pycodestyle_violations_report.html  pycodestyle_violations_report.json  pycodestyle_violations_report.md  (+37 more)
tests/test_clover_violations_reporter/: test.xml
